--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 {#        </ul>#}
     </div>
     <div class="col-lg-6" style="margin-left: 25%;">
-        <form action="/query/" method="post" class="input-group">
+        <form action="/q/" method="post" class="input-group">
 {#        <form action="/query/" method="get" class="input-group">#}
             <input type="text" name="keyword" class="form-control">
       <span class="input-group-btn">
