--- a/templates/result.html
+++ b/templates/result.html
@@ -14,7 +14,7 @@
             {% for book in result %}
                 <tr>
                     <td>{{ book['index'] }}</td>
-                    <td><a href="/d?marc_no={{ book['link'] }}" target="_blank">{{ book['title'] }}</a></td>
+                    <td><a href="/book-detail/{{ book['link'] }}" target="_blank">{{ book['title'] }}</a></td>
 {#                    <td><a href="{{ book['link'] }}" target="_blank">{{ book['title'].decode('utf-8') }}</a></td>#}
                     <td>{{ book['id'] }}</td>
 {#                    <td>{{ book['pub'].decode('utf-8') }}</td>#}
